# SwaySettings

build-scripts/: swaysettings-git.rpkg.spec
data/: style.css
src/: meson.build
src/Settings/: meson.build
src/Settings/Pages/: meson.build
src/Settings/Pages/Network/: ConnectionEditor.vala  InterfaceList.vala  Network.vala  NetworkConnection.vala  NetworkDevice.vala  NetworkPage.vala
src/Settings/Pages/Network/Activate/: Activation.vala  ActivationPage.vala
src/Settings/Pages/Network/Edit/: ConnectionEditor.vala  EditorPage.vala
src/Settings/Pages/Network/Edit/SettingsPages/: ipv6.vala  template.vala  wifi.vala
src/Settings/Pages/Network/SettingsPages/: GeneralEditor.vala  TemplateEditor.vala  ethernet.vala  general.vala  ipv4.vala  ipv6.vala  template.vala  wifi.vala
src/Settings/Pages/Network/Widgets/: DisplayList.vala
src/Settings/Window/: Window.vala
