swaysettings_sources += files([
  'About/About.vala',
  'Background/BackgroundPage.vala',
  'Bluetooth/BluetoothPage.vala',
  'Bluetooth/BluetoothDeviceRow.vala',
  'Bluetooth/Bluez/BluezPairDialog.vala',
  'Bluetooth/Bluez/BluezDaemon.vala',
  'Bluetooth/Bluez/BluezAdapter.vala',
  'Bluetooth/Bluez/BluezDevice.vala',
  'Bluetooth/Bluez/BluezAgent.vala',
  'Themes/ThemesPage.vala',
  'Themes/ThemePreviewItem.vala',
  'KeyboardPage/KeyboardPage.vala',
  'MousePage/MousePage.vala',
  'TrackpadPage/TrackpadPage.vala',
  'DefaultApps/DefaultApps.vala',
  'StartupApps/StartupApps.vala',
  'Swaync/Swaync.vala',
  'Users/Users.vala',
  'Pulse/PulsePage.vala',
  'Pulse/PulseDaemon.vala',
  'Pulse/PulseDevice.vala',
  'Pulse/PulseSinkInput.vala',
  'Network/NetworkPage.vala',
  'Network/ConnectionEditor.vala',
  'Network/SettingsPages/template.vala',
  'Network/SettingsPages/general.vala',
  'Network/SettingsPages/ipv4.vala',
  'Network/SettingsPages/ipv6.vala',
  'Network/SettingsPages/wifi.vala',
  'Network/SettingsPages/ethernet.vala'
])
