swaysettings_sources += files([
  'About/About.vala',
  'Background/BackgroundPage.vala',
  'Bluetooth/BluetoothPage.vala',
  'Bluetooth/BluetoothDeviceRow.vala',
  'Bluetooth/Bluez/BluezPairDialog.vala',
  'Bluetooth/Bluez/BluezDaemon.vala',
  'Bluetooth/Bluez/BluezAdapter.vala',
  'Bluetooth/Bluez/BluezDevice.vala',
  'Bluetooth/Bluez/BluezAgent.vala',
  'Themes/ThemesPage.vala',
  'Themes/ThemePreviewItem.vala',
  'KeyboardPage/KeyboardPage.vala',
  'MousePage/MousePage.vala',
  'TrackpadPage/TrackpadPage.vala',
  'DefaultApps/DefaultApps.vala',
  'StartupApps/StartupApps.vala',
  'Swaync/Swaync.vala',
  'Users/Users.vala',
  'Pulse/PulsePage.vala',
  'Pulse/PulseDaemon.vala',
  'Pulse/PulseDevice.vala',
  'Pulse/PulseSinkInput.vala',
  'Network/Network.vala',
  'Network/Edit/ConnectionEditor.vala',
  'Network/NetworkDevice.vala',
  'Network/NetworkConnection.vala',
  'Network/Edit/SettingsPages/template.vala',
  'Network/Edit/SettingsPages/general.vala',
  'Network/Edit/SettingsPages/ipv4.vala',
  'Network/Edit/SettingsPages/ipv6.vala',
  'Network/Edit/SettingsPages/wifi.vala',
  'Network/Edit/SettingsPages/ethernet.vala',
  'Network/Activate/ActivationPage.vala',
  'Network/Edit/EditorPage.vala',
  'Network/Widgets/DisplayList.vala'
])
